fix: overflow

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   display: grid;
   place-content: center;
   font-family: "Quicksand", sans-serif;
-  overflow-x: hidden;
 }
 
 /* NAVBAR */
